기록 상세보기 끝

--- a/webapp/WEB-INF/views/course/c_viewForm.html
+++ b/webapp/WEB-INF/views/course/c_viewForm.html
@@ -89,6 +89,7 @@
 					</div>
 				</div>
 				
+				<!-- 통계그래프 -->
 				<div class="record-status">
 					<h3>일기 작성 현황</h3>
 					
@@ -103,9 +104,13 @@
 					</div>
 				</div>
 				
+				<!-- 하단버튼 -->
 				<div id="course-info-btn">
-					<button class="link-btn">후기 보러가기</button>
-					<button class="like-btn"><img src="../../../assets/image/main/heart-off.png"> 0</button>
+					<a class="link-btn">후기 보러가기</a>
+					<a class="like-btn">
+						<img src="../../../assets/image/main/heart-off.png">
+						<span>0</span>
+					</a>
 				</div>
 			</div>
 		</div>
