--- a/webapp/WEB-INF/views/course/r_viewForm.html
+++ b/webapp/WEB-INF/views/course/r_viewForm.html
@@ -54,96 +54,134 @@
 				<div class="record-info-content">
 					<ul>
 						<li>
-							<div>
-								<div>
+							<div class="record-full-content">
+								<div class="record-txt">
 									<div class="record-content">
-										<span class="name bold">박깜이<img src="../../../assets/image/course/footprint.png" width="12px"></span>
-										<p>즐겁게 뛰었던 코스~</p>
+										<span class="record">
+											<span class="bold"><img src="../../../assets/image/course/footprint.png" width="12px">박깜이</span>
+											<span>즐겁게 뛰었던 코스~즐겁게 뛰었던 코스~즐겁게 뛰었던 코스~즐겁게 뛰었던 코스~</span>
+										</span>
 									</div>
-									<div>
-										<span>220.07.18 10:03</span>
-										<span>※20℃</span>
-										<span>산책</span>
-										<span>어려움</span>
+									<div class="record-info">
+										<span>22.07.18 10:03</span>
+										<span><img src="../../../assets/image/course/sun.png"></span>
+										<span>20℃</span>
+										<span class="box blue">산책</span>
+										<span class="box pink">어려움</span>
 									</div>
 								</div>
 								
-								<div>
+								<div class="record-img">
 									<img src="../../../assets/image/course/img.jpg" width="24px">
 								</div>
 							</div>
 						</li>
 						
 						<li>
-							<div>
-								<div>
-									<p>박깜이●</p>
-									<span>즐겁게 뛰었던 코스~</span>
-									<p>220.07.18 10:03</p>
-									<p>※20℃</p>
-									<span>산책</span>
-									<span>어려움</span>
+							<div class="record-full-content">
+								<div class="record-txt">
+									<div class="record-content">
+										<span class="record">
+											<span class="bold">김쭈쭈</span>
+											<span>링거 맞고 뛰었어요</span>
+										</span>
+									</div>
+									<div class="record-info">
+										<span>22.07.18 10:03</span>
+										<span><img src="../../../assets/image/course/cloud.png"></span>
+										<span>20℃</span>
+										<span class="box blue">러닝</span>
+										<span class="box pink">어려움</span>
+									</div>
 								</div>
 								
-								<div>
+								<div class="record-img">
 									<img src="../../../assets/image/course/img.jpg" width="24px">
 								</div>
 							</div>
 						</li>
+						
 						<li>
-							<div>
-								<div>
-									<p>박깜이●</p>
-									<span>즐겁게 뛰었던 코스~</span>
-									<p>220.07.18 10:03</p>
-									<p>※20℃</p>
-									<span>산책</span>
-									<span>어려움</span>
+							<div class="record-full-content">
+								<div class="record-txt">
+									<div class="record-content">
+										<span class="record">
+											<span class="bold">김쭌이</span>
+											<span>랄라라</span>
+										</span>
+									</div>
+									<div class="record-info">
+										<span>22.07.18 10:03</span>
+										<span><img src="../../../assets/image/course/moon.png"></span>
+										<span>20℃</span>
+										<span class="box blue">마라톤</span>
+										<span class="box pink">쉬움</span>
+									</div>
 								</div>
 								
-								<div>
-									<img src="../../../assets/image/course/img.jpg" width="24px">
+								<div class="record-img">
+									<!-- <img src="../../../assets/image/course/img.jpg" width="24px"> -->
 								</div>
 							</div>
 						</li>
+						
 						<li>
-							<div>
-								<div>
-									<p>박깜이●</p>
-									<span>즐겁게 뛰었던 코스~</span>
-									<p>220.07.18 10:03</p>
-									<p>※20℃</p>
-									<span>산책</span>
-									<span>어려움</span>
+							<div class="record-full-content">
+								<div class="record-txt">
+									<div class="record-content">
+										<span class="record">
+											<span class="name bold"><img src="../../../assets/image/course/footprint.png" width="12px">박깜이</span>
+											<span>즐겁게 뛰었던 코스~</span>
+										</span>
+									</div>
+									<div class="record-info">
+										<span>22.07.18 10:03</span>
+										<span><img src="../../../assets/image/course/rain.png"></span>
+										<span>20℃</span>
+										<span class="box blue">산책</span>
+										<span class="box pink">어려움</span>
+									</div>
 								</div>
 								
-								<div>
-									<img src="../../../assets/image/course/img.jpg" width="24px">
+								<div class="record-img">
+									<!-- <img src="../../../assets/image/course/img.jpg" width="24px"> -->
 								</div>
 							</div>
 						</li>
+						
 						<li>
-							<div>
-								<div>
-									<p>박깜이●</p>
-									<span>즐겁게 뛰었던 코스~</span>
-									<p>220.07.18 10:03</p>
-									<p>※20℃</p>
-									<span>산책</span>
-									<span>어려움</span>
+							<div class="record-full-content">
+								<div class="record-txt">
+									<div class="record-content">
+										<span class="record">
+											<span class="name bold">우영우</span>
+											<span>이 사건은 재미있습니다. 제가 좋아하는 고래 퀴즈 같아요. 몸무게가 22톤인 암컷 향고래가 500kg에 달하는 대왕오징어를 먹고 6시간 뒤 1.3톤짜리 알을 낳았다면 이 암컷 향고래의 몸무게는 얼마일까요? 정답은 ‘고래는 알을 낳을 수 없다’입니다. 고래는 포유류라 알이 아닌 새끼를 낳으니까요. 무게에만 초점을 맞추면 문제를 풀 수 없습니다. 핵심을 봐야 돼요.</span>
+										</span>
+									</div>
+									<div class="record-info">
+										<span>22.07.18 10:03</span>
+										<span><img src="../../../assets/image/course/snow.png"></span>
+										<span>20℃</span>
+										<span class="box blue">산책</span>
+										<span class="box pink">어려움</span>
+									</div>
 								</div>
 								
-								<div>
+								<div class="record-img">
 									<img src="../../../assets/image/course/img.jpg" width="24px">
 								</div>
 							</div>
 						</li>
+						
 					</ul>
 				</div>
 				
 				<div id="course-info-btn">
-					<button class="link-btn">후기 보러가기</button>
-					<button class="like-btn"><img src="../../../assets/image/main/heart-off.png"> 0</button>
+					<a class="link-btn">기록 작성하기</a>
+					<a class="like-btn">
+						<img src="../../../assets/image/main/heart-off.png">
+						<span>0</span>
+					</a>
 				</div>
 			</div>
 		</div>
