--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -57,142 +57,162 @@
 		
 		<div class="resultView">
 			<div class="resultList">
-				<p id="listTitle">즐겨찾기1(이름변경가능)</p>
-				<ol>
-					<li>
-						<a href="">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
-						  	<div id="textBox">
-								<p id="courseName">신나는 코스</p>
-								<p id="courseInfo">홍길동</p>
-								<p id="courseInfo">조회수2 * 22.07.01</p>
-						  	</div>
-						</a>
-					</li>
-					<li>
-						<a href="">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-						  	<div id="textBox">
-								<p id="courseName">이건아닌데...</p>
-								<p id="courseInfo">고길동</p>
-								<p id="courseInfo">조회수2 * 22.06.30</p>
-						  	</div>
-						</a>
-					</li>
-					<li>
-						<a href="">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
-						  	<div id="textBox">
-								<p id="courseName">깐따삐야 가는 길</p>
-								<p id="courseInfo">둘리</p>
-								<p id="courseInfo">조회수18 * 22.06.29</p>
-						  	</div>
-					  	</a>
-					</li>
-					<li>
-						<a href="">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-						  	<div id="textBox">
-								<p id="courseName">집에 가는 길</p>
-								<p id="courseInfo">둘리</p>
-								<p id="courseInfo">조회수11 * 22.06.21</p>
-						 	</div>
-						</a>
-					</li>
-					
-					
-					<li>
-						<a href="">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
-						  	<div id="textBox">
-								<p id="courseName">신나는 코스</p>
-								<p id="courseInfo">홍길동</p>
-								<p id="courseInfo">조회수2 * 22.07.01</p>
-						  	</div>
-						</a>
-					</li>
-					<li>
-						<a href="">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-						  	<div id="textBox">
-								<p id="courseName">이건아닌데...</p>
-								<p id="courseInfo">고길동</p>
-								<p id="courseInfo">조회수2 * 22.06.30</p>
-						  	</div>
-						</a>
-					</li>
-					<li>
-						<a href="">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
-						  	<div id="textBox">
-								<p id="courseName">깐따삐야 가는 길</p>
-								<p id="courseInfo">둘리</p>
-								<p id="courseInfo">조회수18 * 22.06.29</p>
-						  	</div>
-					  	</a>
-					</li>
-					<li>
-						<a href="">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-						  	<div id="textBox">
-								<p id="courseName">집에 가는 길</p>
-								<p id="courseInfo">둘리</p>
-								<p id="courseInfo">조회수11 * 22.06.21</p>
-						 	</div>
-						</a>
-					</li>
-					
-					
-					
-					
-					<li>
-						<a href="">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
-						  	<div id="textBox">
-								<p id="courseName">신나는 코스</p>
-								<p id="courseInfo">홍길동</p>
-								<p id="courseInfo">조회수2 * 22.07.01</p>
-						  	</div>
-						</a>
-					</li>
-					<li>
-						<a href="">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-						  	<div id="textBox">
-								<p id="courseName">이건아닌데...</p>
-								<p id="courseInfo">고길동</p>
-								<p id="courseInfo">조회수2 * 22.06.30</p>
-						  	</div>
-						</a>
-					</li>
-					<li>
-						<a href="">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
-						  	<div id="textBox">
-								<p id="courseName">깐따삐야 가는 길</p>
-								<p id="courseInfo">둘리</p>
-								<p id="courseInfo">조회수18 * 22.06.29</p>
-						  	</div>
-					  	</a>
-					</li>
-					<li>
-						<a href="">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
-						  	<div id="textBox">
-								<p id="courseName">집에 가는 길</p>
-								<p id="courseInfo">둘리</p>
-								<p id="courseInfo">조회수11 * 22.06.21</p>
-						 	</div>
-						</a>
-					</li>
-				</ol> 
+				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+  					<div class="panel panel-default">
+    					<div class="panel-heading" role="tab" id="headingOne">
+      						<h4 class="panel-title">
+        						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									<p id="listTitle">즐겨찾기1(이름변경가능)</p>
+								</a>
+							</h4>
+						</div>
+					<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+						<div class="panel-body">
+							<ol>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	<div id="textBox">
+											<p id="courseName">신나는 코스</p>
+											<p id="courseInfo">홍길동</p>
+											<p id="courseInfo">조회수2 * 22.07.01</p>
+									  	</div>
+									</a>
+								</li>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div id="textBox">
+											<p id="courseName">이건아닌데...</p>
+											<p id="courseInfo">고길동</p>
+											<p id="courseInfo">조회수2 * 22.06.30</p>
+									  	</div>
+									</a>
+								</li>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	<div id="textBox">
+											<p id="courseName">깐따삐야 가는 길</p>
+											<p id="courseInfo">둘리</p>
+											<p id="courseInfo">조회수18 * 22.06.29</p>
+									  	</div>
+								  	</a>
+								</li>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div id="textBox">
+											<p id="courseName">집에 가는 길</p>
+											<p id="courseInfo">둘리</p>
+											<p id="courseInfo">조회수11 * 22.06.21</p>
+									 	</div>
+									</a>
+								</li>
+								
+								
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	<div id="textBox">
+											<p id="courseName">신나는 코스</p>
+											<p id="courseInfo">홍길동</p>
+											<p id="courseInfo">조회수2 * 22.07.01</p>
+									  	</div>
+									</a>
+								</li>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div id="textBox">
+											<p id="courseName">이건아닌데...</p>
+											<p id="courseInfo">고길동</p>
+											<p id="courseInfo">조회수2 * 22.06.30</p>
+									  	</div>
+									</a>
+								</li>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	<div id="textBox">
+											<p id="courseName">깐따삐야 가는 길</p>
+											<p id="courseInfo">둘리</p>
+											<p id="courseInfo">조회수18 * 22.06.29</p>
+									  	</div>
+								  	</a>
+								</li>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div id="textBox">
+											<p id="courseName">집에 가는 길</p>
+											<p id="courseInfo">둘리</p>
+											<p id="courseInfo">조회수11 * 22.06.21</p>
+									 	</div>
+									</a>
+								</li>
+							</ol>
+						</div>
+    				</div>
+  				</div>
+  				<div class="panel panel-default">
+    				<div class="panel-heading" role="tab" id="headingTwo">
+      					<h4 class="panel-title">
+        					<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+								<p id="listTitle">즐겨찾기222(이름변경가능)</p>
+								</a>
+							</h4>
+						</div>
+					<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+						<div class="panel-body">
+							<ol>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	<div id="textBox">
+											<p id="courseName">신나는 코스</p>
+											<p id="courseInfo">홍길동</p>
+											<p id="courseInfo">조회수2 * 22.07.01</p>
+									  	</div>
+									</a>
+								</li>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div id="textBox">
+											<p id="courseName">이건아닌데...</p>
+											<p id="courseInfo">고길동</p>
+											<p id="courseInfo">조회수2 * 22.06.30</p>
+									  	</div>
+									</a>
+								</li>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	<div id="textBox">
+											<p id="courseName">깐따삐야 가는 길</p>
+											<p id="courseInfo">둘리</p>
+											<p id="courseInfo">조회수18 * 22.06.29</p>
+									  	</div>
+								  	</a>
+								</li>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div id="textBox">
+											<p id="courseName">집에 가는 길</p>
+											<p id="courseInfo">둘리</p>
+											<p id="courseInfo">조회수11 * 22.06.21</p>
+									 	</div>
+									</a>
+								</li>
+							</ol>
+						</div>
+				    </div>
+				  </div>
+				</div>
 			</div>
 		</div>
-		
-		
-		
-		
-		
 		
 		
 		<!-- 메인 푸터  자리-->
