--- a/webapp/WEB-INF/views/best/bestplus.html
+++ b/webapp/WEB-INF/views/best/bestplus.html
@@ -32,10 +32,7 @@
 			</div>
 			<!-- nav -->
 		</div>
-		<!-- header -->
-
-
-
+<!------------------------- header --------------------------->
 
 		<h1>Best</h1>
 
@@ -84,9 +81,7 @@
 				</p>
 			</div>
 
-			<br>
-			<br>
-			<br>
+			<br> <br> <br>
 
 			<div class="img-line">
 				<a href=""> <img
@@ -100,9 +95,7 @@
 
 		</div>
 
-		<br>
-		<br>
-		<br>
+		<br> <br> <br>
 
 		<hr class="one">
 
