--- a/webapp/WEB-INF/views/best/best.html
+++ b/webapp/WEB-INF/views/best/best.html
@@ -9,98 +9,154 @@
 
 </head>
 <body>
+	<div id="wrap">
 
-	<div id="header">
-		<a href="../main/index.html"><img id="logo"
-			src="../../../assets/image/main/logo.jpg"></a>
+		<div id="header">
+			<a href="../main/index.html"><img id="logo"
+				src="../../../assets/image/main/logo.jpg"></a>
 
-		<div id="login">
-			<ul>
-				<li><a href="">회원가입</a></li>
-				<li><a href="">로그인</a></li>
-			</ul>
+			<div id="login">
+				<ul>
+					<li><a href="">회원가입</a></li>
+					<li><a href="">로그인</a></li>
+				</ul>
+			</div>
+			<!-- login -->
+
+			<div id="nav">
+				<ul>
+					<li><a href="../together/together.html">함깨하기</a></li>
+					<li><a href="../board/board.html">게시판</a></li>
+					<li><a href="../best/best.html">베스트</a></li>
+					<li><a href="../map/map.html">지도</a></li>
+				</ul>
+			</div>
+			<!-- nav -->
 		</div>
-		<!-- login -->
+		<!---------------- header ----------------->
 
-		<div id="nav">
-			<ul>
-				<li><a href="../together/together.html">함깨하기</a></li>
-				<li><a href="../board/board.html">게시판</a></li>
-				<li><a href="../best/best.html">베스트</a></li>
-				<li><a href="../map/map.html">지도</a></li>
-			</ul>
+		<!-- context -->
+		<h1>Best</h1>
+
+		<h2>♡ <span>좋아요 </span>Best</h2>
+
+		<div class="best-listtext">
+
+			<div class="best">
+				<div class="best-go">
+					<a href="" id="Go">Go<img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\Goline.jpg"></a>
+					<input type='button' class='btn-prev' name='btn-prev' value='<'>
+				</div>
+
+				<div class="best-list">
+					<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
+					<p id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span>
+					</p>
+				</div>
+			</div>
+
+			<div class="best">
+				<div class="best-list">
+					<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
+					<p id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span>
+					</p>
+				</div>
+
+			</div>
+			<div class="best">
+				<div class="best-list">
+					<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
+					<p id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></p>
+					<input type='button' class='btn-next' name='btn-next' value='>'>
+				</div>
+			</div>
+		
+
 		</div>
-		<!-- nav -->
-	</div>
-	<!-- header -->
+			
+		<h2 id="h2-2">☆ <span>즐겨찾기 </span>Best</h2>
+		<div class="best-listtext">
 
+			<div class="best">
+				<div class="best-go">
+					<a href="" id="Go">Go<img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\Goline.jpg"></a>
+					<input type='button' class='btn-prev' name='btn-prev' value='<'>
+				</div>
 
+				<div class="best-list">
+					<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
+					<p id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span>
+					</p>
+				</div>
+			</div>
 
-	<!-- context -->
-	<h1>Best</h1>
+			<div class="best">
+				<div class="best-list">
+					<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
+					<p id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span>
+					</p>
+				</div>
 
-	<p id="best-title">☆ 좋아요 Best</p>
-	<a href="" id="Go">Go &gt;</a>
+			</div>
+			<div class="best">
+				<div class="best-list">
+					<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
+					<p id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></p>
+					<input type='button' class='btn-next' name='btn-next' value='>'>
+				</div>
+			</div>
 
-	<input type='button' class='btn-prev' name='btn-prev' value='<'>
-	<div class="best-listtext">
-		<div class="best-list">
-			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
-			<p id="best-text">지역 | 거리</p>
+		</div>	
+		
+				
+		<h2 id="h2-2">♧ <span>기록(후기)</span> Best</h2>
+		<div class="best-listtext">
+
+			<div class="best">
+				<div class="best-go">
+					<a href="" id="Go">Go<img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\Goline.jpg"></a>
+					<input type='button' class='btn-prev' name='btn-prev' value='<'>
+				</div>
+
+				<div class="best-list">
+					<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
+					<p id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></p>
+				</div>
+			</div>
+
+			<div class="best">
+				<div class="best-list">
+					<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
+					<p id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></p>
+				</div>
+
+			</div>
+			<div class="best">
+				<div class="best-list">
+					<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
+					<p id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></p>
+					<input type='button' class='btn-next' name='btn-next' value='>'>
+				</div>
+			</div>
+		
+
 		</div>
-	
-		<div class="best-list">
-			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
-			<p id="best-text">지역 | 거리</p>
-		</div>
-	
-		<div class="best-list">
-			<img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\sakura1.jpg">
-			<p id="best-text">지역 | 거리</p>
-		</div>
-	</div>
-
-	<input type='button' class='btn-next' name='btn-next' value='>'>
-
-
-
-
-
-	<p id="best-title">☆ 즐겨찾기 Best</p>
-	<a href="" id="Go">Go &gt;</a>
-
-	<input type='button' class='btn-prev' name='btn-prev' value='<'>
-
-	<input type='button' class='btn-next' name='btn-next' value='>'>
-
-
-	<p id="best-title">☆ 기록(후기) Best</p>
-	<a href="" id="Go">Go &gt;</a>
-
-	<input type='button' class='btn-prev' name='btn-prev' value='<'>
-
-
-
-	<input type='button' class='btn-next' name='btn-next' value='>'>
-	<!-- /context -->
-
-
+		<!-- /context -->
 
 	<!-- 푸터 자리 -->
 	<br>
 	<div class="footer">
-		<div class="footer-text">
-			<p>주식회사 조아</p>
-			<p>대표 : 최보승</p>
-			<p>사업자 번호 : 123-456-789</p>
-			<p>서울특별시 관악구 봉천동 862 - 1</p>
-			<br>
-			<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일,
-				공휴일 휴무)</p>
-			<p>tel. 02 - 1111 - 1111</p>
-			<p>fax. 02 - 1111 - 1111</p>
-			<p>email. joa@joa.co.kr</p>
-		</div>
+		<ul class="footer-text">
+			<li>주식회사 조아</li>
+			<li>대표 : 최보승</li>
+			<li>사업자 번호 : 123-456-789</li>
+			<li>서울특별시 관악구 봉천동 862 - 1</li>
+			<li>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일,
+				공휴일 휴무)</li>
+			<li>tel. 02 - 1111 - 1111</li>
+			<li>fax. 02 - 1111 - 1111</li>
+			<li>email. joa@joa.co.kr</li>
+		</ul>
 		<br>
 		<div class="footer-btn">
 			<button id="footerbtn" type="button">자주묻는 질문</button>
@@ -112,5 +168,6 @@
 
 	</div>
 	<!-- /footer -->
+	</div>
 </body>
 </html>
