--- a/webapp/WEB-INF/views/main/index.html
+++ b/webapp/WEB-INF/views/main/index.html
@@ -3,69 +3,80 @@
 <head>
 <meta charset="UTF-8">
 <title>JOA Main</title>
-<link rel="stylesheet" href="../../../assets/css/main.css" type="text/css">
+<link rel="stylesheet" href="../../../assets/css/main.css"
+	type="text/css">
 
 </head>
 <body>
+	<div id="wrap">
+		<div id="header">
+			<a href="../main/index.html"><img id="logo"
+				src="../../../assets/image/main/logo.jpg"></a>
 
-	<div id="header">
-		<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
-		
-		<div id="login">
-			<ul>
-				<li><a href="">회원가입</a></li>
-				<li><a href="">로그인</a></li>
+			<div id="login">
+				<ul>
+					<li><a href="">회원가입</a></li>
+					<li><a href="">로그인</a></li>
+				</ul>
+			</div>
+			<!-- login -->
+
+			<div id="nav">
+				<ul>
+					<li><a href="../together/together.html">함깨하기</a></li>
+					<li><a href="../board/board.html">게시판</a></li>
+					<li><a href="../best/best.html">베스트</a></li>
+					<li><a href="../map/map.html">지도</a></li>
+				</ul>
+			</div>
+			<!-- nav -->
+		</div>
+		<!-- header -->
+
+
+		<!-- photo slider -->
+		<div class="slider">
+			<input type="radio" name="slide" id="slide1" checked> <input
+				type="radio" name="slide" id="slide2"> <input type="radio"
+				name="slide" id="slide3"> <input type="radio" name="slide"
+				id="slide4">
+			<ul class="imgs" id="imgholder">
+				<li><img
+					src="c:\javastudy\workspace_web\joa\webapp\assets\images\poo613.jpg"></li>
+				<li><img
+					src="c:\javastudy\workspace_web\joa\webapp\assets\images\sw1.jpg"></li>
+				<li><img
+					src="c:\javastudy\workspace_web\joa\webapp\assets\images\poo613.jpg"></li>
+				<li><img
+					src="c:\javastudy\workspace_web\joa\webapp\assets\images\sw1.jpg"></li>
 			</ul>
-		</div> <!-- login -->
-		
-		<div id="nav">
-			<ul>
-				<li><a href="../together/together.html">함깨하기</a></li>
-				<li><a href="../board/board.html">게시판</a></li>
-				<li><a href="../best/best.html">베스트</a></li>
-				<li><a href="../map/map.html">지도</a></li>
-			</ul>
-		</div> <!-- nav -->
-	</div> <!-- header -->
+
+			<div class="bullets">
+				<label for="slide1">&nbsp;</label> <label for="slide2">&nbsp;</label>
+				<label for="slide3">&nbsp;</label> <label for="slide4">&nbsp;</label>
+			</div>
+		</div>
+		<!-- /photo slider -->
 
 
-<!-- photo slider -->
-<div class="slider">
-	<input type="radio" name="slide" id="slide1" checked>
-    <input type="radio" name="slide" id="slide2">
-    <input type="radio" name="slide" id="slide3">
-    <input type="radio" name="slide" id="slide4">
-    	<ul class="imgs" id="imgholder">
-			<li><img src="c:\javastudy\workspace_web\joa\webapp\assets\images\poo613.jpg"></li>
-			<li><img src="c:\javastudy\workspace_web\joa\webapp\assets\images\sw1.jpg"></li>
-			<li><img src="c:\javastudy\workspace_web\joa\webapp\assets\images\poo613.jpg"></li>
-			<li><img src="c:\javastudy\workspace_web\joa\webapp\assets\images\sw1.jpg"></li>
-		</ul>
-		
-		<div class="bullets">
-	        <label for="slide1">&nbsp;</label>
-	        <label for="slide2">&nbsp;</label>
-	        <label for="slide3">&nbsp;</label>
-	        <label for="slide4">&nbsp;</label>
-  			</div>
-</div>
-<!-- /photo slider -->
-	
+		<div class="main-text">
+			<p>
+				<span>살아 숨쉬는 자연에서 <br>
+				<br> 운동을 시작하다.
+				</span>
+			</p>
+			<br>
+			<br>
+			<br>
+			<p>
+				<span>Joyful Outdoor Activity</span>
+			</p>
+			<br>
+			<br>
+			<br>
+		</div>
+		<!-- /text -->
 
-	<div class="main-text">
-		<p>
-			<span>살아 숨쉬는 자연에서
-			<br><br> 
-			운동을 시작하다.</span>
-		</p>
-		<br><br><br>
-		<p>
-			<span>Joyful Outdoor Activity</span>
-		</p>
-		<br><br><br>
-	</div>
-	<!-- /text -->
-	
 
 		<br>
 		<div class="footer">
@@ -91,7 +102,7 @@
 			<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
 
 		</div>
-<!-- /footer -->
-
+		<!-- /footer -->
+	</div>
 </body>
 </html>
