--- a/webapp/WEB-INF/views/map/map.html
+++ b/webapp/WEB-INF/views/map/map.html
@@ -30,30 +30,93 @@
 	
 	<div id="sub-header">
 		<div id="searchbar">
-			<img id="search-icon" src="">
+			<img class="search-icon" src="../../../assets/image/map/search.png">
 			<input id="search-input" type="text">
-			<button>지역</button>
-			<button>제목</button>
+			<button class="btn-blue">지역</button>
+			<button class="btn-grey">제목</button>
 		</div> <!-- searchbar -->
+		<div id="filter-menu">
+			<button class="fmenu">종목 <img class="down-icon" src="../../../assets/image/map/down.png"></button>
+			<button class="fmenu">코스길이 <img class="down-icon" src="../../../assets/image/map/down.png"></button>
+			<button class="fmenu">난이도 <img class="down-icon" src="../../../assets/image/map/down.png"></button>
+		</div> <!-- filter-menu -->
 		<div id="filter-buttons">
 			
 		</div> <!-- filter-buttons -->
-		<div id="filter">
-			
-		</div> <!-- filter -->
 	</div> <!-- sub-header -->
-	<div id="result-mask">
-		<ul id="ul-result">
-			<li class="result-list">
-			<div class="result-container">
-				
-			</div> <!-- result-container -->
-			</li>
-		</ul>
-	</div> <!-- result-mask -->
-	<div id="map">
-		
-	</div> <!-- map -->
+	
+	<div id="content">
+		<div id="result-list">
+			<ul>
+				<li>
+					<div class="course-container">
+						<div class="course-icon"><img src="../../../assets/image/map/map-icon.jpg"></div>
+						<div class="course-info">
+							<h3 class="course-title">헬 ^^</h3>
+							<p class="p-info">
+								작성자: 쿵야 <br>
+								거리: 5.0km <br>
+								시간: 40분
+							</p>
+							<div class="tag-blue"><p>런닝</p></div>
+							<div class="tag-pink"><p>어려움</p></div>
+						</div> <!-- course-info -->
+					</div> <!-- course-container -->
+				</li>
+				<li>
+					<div class="course-container">
+						<div class="course-icon"><img src="../../../assets/image/map/map-icon.jpg"></div>
+						<div class="course-info">
+							<h3>넘 하기 싫다</h3>
+							<br>
+							<p>
+								작성자: 쿵야 <br>
+								거리: 6.0km <br>
+								시간: 50분
+							</p>
+							<div class="tag-blue"><p>조깅</p></div>
+							<div class="tag-pink"><p>어려움</p></div>
+						</div> <!-- course-info -->
+					</div> <!-- course-container -->
+				</li>
+				<li>
+					<div class="course-container">
+						<div class="course-icon"><img src="../../../assets/image/map/map-icon.jpg"></div>
+						<div class="course-info">
+							<h3>언제 끝남</h3>
+							<br>
+							<p>
+								작성자: 쿵야 <br>
+								거리: 7.0km <br>
+								시간: 50분
+							</p>
+							<div class="tag-blue"><p>조깅</p></div>
+							<div class="tag-pink"><p>어려움</p></div>
+						</div> <!-- course-info -->
+					</div> <!-- course-container -->
+				</li>
+				<li>
+					<div class="course-container">
+						<div class="course-icon"><img src="../../../assets/image/map/map-icon.jpg"></div>
+						<div class="course-info">
+							<h3>ㅠㅠ</h3>
+							<br>
+							<p>
+								작성자: 쿵야 <br>
+								거리: 5.0km <br>
+								종목: 런닝
+							</p>
+							<div class="tag-blue"><p>런닝</p></div>
+							<div class="tag-pink"><p>어려움</p></div>
+						</div> <!-- course-info -->
+					</div> <!-- course-container -->
+				</li>
+			</ul>
+		</div> <!-- result-mask -->
+		<div id="map">
+			<img src="../../../assets/image/map/map-sample.jpg">
+		</div> <!-- map -->
+	</div><!-- content -->
 </div> <!-- wrap -->
 </body>
 </html>
