--- a/webapp/WEB-INF/views/map/map.html
+++ b/webapp/WEB-INF/views/map/map.html
@@ -67,9 +67,9 @@
 					<div class="course-container">
 						<div class="course-icon"><img src="../../../assets/image/map/map-icon.jpg"></div>
 						<div class="course-info">
-							<h3>넘 하기 싫다</h3>
+							<h3 class="course-title">넘 하기 싫다</h3>
 							<br>
-							<p>
+							<p class="p-info">
 								작성자: 쿵야 <br>
 								거리: 6.0km <br>
 								시간: 50분
@@ -83,9 +83,9 @@
 					<div class="course-container">
 						<div class="course-icon"><img src="../../../assets/image/map/map-icon.jpg"></div>
 						<div class="course-info">
-							<h3>언제 끝남</h3>
+							<h3 class="course-title">언제 끝남</h3>
 							<br>
-							<p>
+							<p class="p-info">
 								작성자: 쿵야 <br>
 								거리: 7.0km <br>
 								시간: 50분
@@ -99,9 +99,9 @@
 					<div class="course-container">
 						<div class="course-icon"><img src="../../../assets/image/map/map-icon.jpg"></div>
 						<div class="course-info">
-							<h3>ㅠㅠ</h3>
+							<h3 class="course-title">ㅠㅠ</h3>
 							<br>
-							<p>
+							<p class="p-info">
 								작성자: 쿵야 <br>
 								거리: 5.0km <br>
 								종목: 런닝
