--- a/webapp/assets/css/best.css
+++ b/webapp/assets/css/best.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import "clearfix.css";
+@import "includes.css";
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
 /* ****************** 레이아웃 ****************** */
