--- a/webapp/assets/css/main.css
+++ b/webapp/assets/css/main.css
@@ -1,7 +1,9 @@
 @charset "UTF-8";
 @import "clearfix.css";
 @import "includes.css";
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
+/* ****************** 레이아웃 ****************** */
 #wrap {max-width:1200px;}
 #wrap>#content {padding: 10px 0px; margin-bottom: 150px;}
 
