--- a/webapp/WEB-INF/views/includes/course-container.html
+++ b/webapp/WEB-INF/views/includes/course-container.html
@@ -6,7 +6,19 @@
 	</head>
 	<body>
 		
-		
+		<div class="course-container">
+			<div class="course-icon"><img src="../../../assets/image/map/map-icon.jpg"></div>
+			<div class="course-info">
+				<h3 class="course-title">헬 ^^</h3>
+				<p class="p-info">
+					작성자: 쿵야 <br>
+					거리: 5.0km <br>
+					시간: 40분
+				</p>
+				<div class="tag-blue"><p>런닝</p></div>
+				<div class="tag-pink"><p>어려움</p></div>
+			</div> <!-- course-info -->
+		</div> <!-- course-container -->
 		
 	</body>
 </html>
