--- a/webapp/assets/css/clearfix.css
+++ b/webapp/assets/css/clearfix.css
@@ -64,3 +64,7 @@ a:active  {color: #000000; text-decoration: none;}
    min-width: 1200px;
    margin: 0px auto;
 }
+
+textarea:focus, input:focus{
+    outline: none;
+}
