--- a/webapp/assets/css/course_view.css
+++ b/webapp/assets/css/course_view.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import "includes.css";
 @import "main.css";
 
 /* =======================공통======================= */
@@ -35,7 +36,7 @@ input[type=radio] {display:none;}
 	font-size: 16px;
 	text-align: center;
 	background-color: rgb(255,255,255);
-	border-bottom: 1px solid black;
+	border: 1px solid rgb(174, 174, 174);
 }
 /* 검은색 버튼 */
 .selected, .selected>a {
@@ -48,17 +49,14 @@ input[type=radio] {display:none;}
 	padding: 20px 32px;
 	width: 100%;
 	height: 510px;
-	/* 임시선 */
-	border: 1px solid #ffff00;
-}
-.course-view-info .course-info-content {
-	padding-bottom: 25px;
-	border-bottom: 1px solid rgb(101, 101, 101);
+	border: 1px solid rgb(174, 174, 174);
 }
 
 /* ===================================코스 정보==================================== */
 /* 레이아웃 */
 .course-view-info .course-info-content {
+	padding-bottom: 25px;
+	border-bottom: 1px solid rgb(101, 101, 101);
 	height: 190px;
 }
 .course-view-info .record-status {
@@ -110,30 +108,25 @@ input[type=radio] {display:none;}
 }
 
 /* ---------------------기록 정보 (그래프)----------------------- */
+/* 레이아웃 */
 .course-view-info .record-status {
 	padding: 20px 0px;
 }
 .record-status h3 {
+	display: inline-block;
 	font-size: 16px;
 	font-weight: 700;
+	margin-right: 10px;
 	margin-bottom: 15px;
 }
-.record-status .graph {
+/* 그래프 선택 버튼 */
+.record-status .graph-choose {float: right;}
+.record-status .graph-choose label {color: rgb(170, 170, 170); margin-left:5px;}
+.record-status .graph-choose input[type="radio"]:checked + label {color: black;	font-weight: 700;}
+
+.record-status .graphs {
 	height: 140px;
 }
-.record-status .graph div {
-	width: 50%;
-	height: 100%;
-	border: 1px solid;
-}
-
-
-
-
-
-
-
-
 
 
 
@@ -203,7 +196,7 @@ input[type=radio] {display:none;}
 	width: 100%;
 	height: auto;
 	overflow: hidden;
-	margin-bottom: 12px;
+	margin-bottom: 15px;
 	border: 1px solid transparent;
 }
 .record-info-content .record-full-content {
