--- a/webapp/WEB-INF/views/together/together.html
+++ b/webapp/WEB-INF/views/together/together.html
@@ -15,11 +15,13 @@
 		
 		<div id="top_side">
 			<ul>
-				<li><a href="">전체</a> | </li>
-				<li><a href="">진행중</a> | </li>
+				<li><a href="">전체</a></li>
+				<li>|</li>
+				<li><a href="">진행중</a></li>
+				<li>|</li>
 				<li><a href="">마감</a></li>
 			</ul>
-		</div>
+		</div><!-- top_side -->
 			
 			<br><br><br>
 			
@@ -30,10 +32,18 @@
 		
 				<div id="rightside">
 					<ul>
-						<li><a href="">함께</a></li>
-						<li><a href="">태그</a></li>
+						<li id="man_btn">
+							<a href="">
+								<span class="glyphicon glyphicon-user"></span> 함께
+							</a>
+						</li>
+						<li id="tag_btn">
+							<a href="">
+								<span class="glyphicon glyphicon-bookmark"></span> 태그
+							</a>
+						</li>
 					</ul>
-				</div>
+				</div><!-- rightside -->
 			</div>
 			
 			<br><br><br>
@@ -41,90 +51,126 @@
 			<div class="chart">
 				<table>
 					<thead>
-						<tr>
-							<th class="line_top">
-								2022/07/24 - 2022/07/30
+						<tr class="top">
+							<th class="line_top">2022/07/24 - 2022/07/30</th>
+							<th class="mark">
 								<button class="bookmark">
-									<span class="glyphicon glyphicon-bookmark" id="mark"></span>
+									<img class="image" src="../../../assets/image/together/bookmarks_black.png">
 								</button>
 							</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<th>쭈쭈네 동네 한바퀴</th>
+							<th colspan="2">쭈쭈네 동네 한바퀴</th>
 						</tr>
 						<tr>
-							<th>신림 - 잠실</th>
+							<th colspan="2"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
 						</tr>
 						<tr>
-							<th class="line_bottom">
+							<th colspan="2" class="line_bottom">
 								산책
-								<button type="submit">11/15</button>
+								<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
 							</th>
 						</tr>
 					</tbody>
 				</table>
-			</div><!-- table -->
+			</div><!-- table(chart) -->
 			
 			<div class="chart">
 				<table>
 					<thead>
-						<tr>
-							<th class="line_top">
-								2022/07/24 - 2022/07/30
+						<tr class="top">
+							<th class="line_top">2022/07/24 - 2022/07/30</th>
+							<th class="mark">
 								<button class="bookmark">
-									<span class="glyphicon glyphicon-bookmark" id="nomark"></span>
+									<img class="image" src="../../../assets/image/together/bookmarks_white.png">
 								</button>
 							</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<th>쭈쭈네 동네 한바퀴</th>
+							<th colspan="2">쭈쭈네 동네 한바퀴</th>
 						</tr>
 						<tr>
-							<th>신림 - 잠실</th>
+							<th colspan="2"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
 						</tr>
 						<tr>
-							<th class="line_bottom">
+							<th colspan="2" class="line_bottom">
 								산책
-								<button type="submit">11/15</button>
+								<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
 							</th>
 						</tr>
 					</tbody>
 				</table>
-			</div><!-- table -->
+			</div><!-- table(chart) -->
 
 			<div class="chart">
 				<table>
 					<thead>
-						<tr>
+						<tr class="top">
 							<th class="line_top">2022/07/24 - 2022/07/30</th>
+							<th class="mark">
+								<button class="bookmark">
+									<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+								</button>
+							</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<th>쭈쭈네 동네 한바퀴</th>
+							<th colspan="2">쭈쭈네 동네 한바퀴</th>
 						</tr>
 						<tr>
-							<th>신림 - 잠실</th>
+							<th colspan="2"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
 						</tr>
 						<tr>
-							<th class="line_bottom">
+							<th colspan="2" class="line_bottom">
 								산책
-								<button type="submit">11/15</button>
+								<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
 							</th>
 						</tr>
 					</tbody>
 				</table>
-			</div><!-- table -->
+			</div><!-- table(chart) -->
+			
+			<div class="chart">
+				<table>
+					<thead>
+						<tr class="top">
+							<th class="line_top">2022/07/24 - 2022/07/30</th>
+							<th class="mark">
+								<button class="bookmark">
+									<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+								</button>
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th colspan="2">쭈쭈네 동네 한바퀴</th>
+						</tr>
+						<tr>
+							<th colspan="2"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+						</tr>
+						<tr>
+							<th colspan="2" class="line_bottom">
+								산책
+								<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+							</th>
+						</tr>
+					</tbody>
+				</table>
+			</div><!-- table(chart) -->
 				
 			<br><br><br><br><br><br><br><br>
 				
-			<div>
-				<button type="submit" id="more">⏷</button>
-			</div>
+			<div id="more_btn">
+				<button type="submit" id="more">
+					<span class="glyphicon glyphicon-chevron-down"></span>
+				</button>
+			</div><!-- more_btn -->
 			
 	</div><!-- wrap -->
 
