--- a/webapp/assets/css/together.css
+++ b/webapp/assets/css/together.css
@@ -21,6 +21,7 @@ ul, ol, li	{
 	list-style-type: none;
 	float: left;
 	margin-left: 8px;
+	margin-right: 8px;
 }
 /** 밑줄, 글자색 없애기 **/
 a {
@@ -28,7 +29,7 @@ a {
 	color: inherit;
 }
 #top_side {
-	margin-left: 375px;
+	margin-left: 43.5%;
 	margin-top: 15px;
 	
 }
@@ -38,11 +39,12 @@ a {
 #to_make {
 	float: left;
 	margin-top: 15px;
-	margin-left: 20px;
+	margin-left: 3.5%;
 }
 #together_make {
 	float: left;
-	padding: 15px 25px;
+	width: 160px;
+	height: 50px;
 	background-color: rgb(50, 108, 249);
 	border:none;
 	color: white;
@@ -51,46 +53,70 @@ a {
 /****************** 태그와 참여 분류 ******************/
 
 #rightside {
-	margin-left: 747px;
+	margin-left: 84.2%;
 	padding:35px 43px;
+	font-size : 13pt;
 }
+#tag_btn {margin-left: 7px;}
 
 /******************** 함께하기 표 ********************/
 
 table {
-	width: 25%;
+	width: 22%;
 	height: 150px;
 	border: solid 1px;
 	float: left;
-	margin-left: 20px;
+	margin-left: 2.4%;
 	border: solid 1px #ccc;
 }
 .chart {text-align: center;}
-/** 표 내부 선 정리 **/
+/** 표 내부 행 **/
 .line_top {
-	border-bottom: solid 1px #ccc;
-	height: 30px;
+	float: left;
+	margin-left: 58px;
+	font-size : 11pt;
 }
-.line_bottom {border-top: solid 1px #ccc;}
-/** 태그 아이콘 **/
-th>.bookmark {
-	width : 23px;
-	height: 20px;
-	margin-left: 15px;
+.line_bottom {
+	margin-left: 20px;
+	border-top: solid 1px #ccc;
+	color: #9e9e9e;
+	font-size : 12pt;
 }
 /** 북마크 버튼 **/
-.bookmark {margin-left: 55px;}
-#nomark {
-	color: #fff;
+.top {
+	height: 20px;
+	border-bottom: solid 1px #ccc;
+}
+.mark {background-color: #fff;}
+.bookmark {
+	margin-left: 12%;
+	margin-top: 5px;
+	background-color: #fff;
+	border:none;
+}
+.image {
+	width : 18px;
+	height: 18px;
+}
+.join {
+	background-color: #fff;
+	border: solid 1px #9e9e9e;
+	color: #9e9e9e;
 }
 
 /*************** 함께하기 리스트 더보기 버튼 ***************/
 
+#more_btn {
+	margin-top: 50px;
+	margin-left: 19%;
+}
 #more {
 	width: 45px;
 	height: 45px;
-	margin-left: 445px;
+	margin-left: 36%;
 	border-radius: 50px;
+	color: #fff;
+	background-color: #000;
 }
 	
 	
