--- a/webapp/WEB-INF/views/my-page/main.html
+++ b/webapp/WEB-INF/views/my-page/main.html
@@ -1,6 +1,3 @@
-<!-- <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
- -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,6 +5,11 @@
 <title>마이페이지</title>
 <link rel="stylesheet" href="../../../assets/bootstrap/css/bootstrap.css">
 <link rel="stylesheet" href="../../../assets/css/my-page.css">
+
+<script type="text/javascript" src="../../../assets/js/jquery/jquery-1.12.4.js"></script>
+<script type="text/javascript" src="../../../assets/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="../../../assets/js/my-page/my-page.js"></script>
+
 
 </head>
 <body>
@@ -43,9 +45,9 @@
 		
 		
 		
-		
-		
 		<!-- 마이페이지 메뉴바 자리 -->
+		
+		
 		
 		
 		
