--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -6,6 +6,10 @@
 <link rel="stylesheet" href="../../../assets/bootstrap/css/bootstrap.css">
 <link rel="stylesheet" href="../../../assets/css/my-page.css">
 
+<script type="text/javascript" src="../../../assets/js/jquery/jquery-1.12.4.js"></script>
+<script type="text/javascript" src="../../../assets/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="../../../assets/js/my-page/bookmark.js"></script>
+
 </head>
 <body>
 	<div id="wrap">
@@ -163,7 +167,7 @@
 								</a>
 							</h4>
 						</div>
-					<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+					<div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
 						<div class="panel-body">
 							<ol>
 								<li>
@@ -210,6 +214,64 @@
 						</div>
 				    </div>
 				  </div>
+				  
+				  
+				  <div class="panel panel-default">
+    				<div class="panel-heading" role="tab" id="headingThree">
+      					<h4 class="panel-title">
+        					<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+								<p id="listTitle">33333즐찾3333333</p>
+								</a>
+							</h4>
+						</div>
+					<div id="collapseThree" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
+						<div class="panel-body">
+							<ol>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	<div id="textBox">
+											<p id="courseName">신나는 코스</p>
+											<p id="courseInfo">홍길동</p>
+											<p id="courseInfo">조회수2 * 22.07.01</p>
+									  	</div>
+									</a>
+								</li>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div id="textBox">
+											<p id="courseName">이건아닌데...</p>
+											<p id="courseInfo">고길동</p>
+											<p id="courseInfo">조회수2 * 22.06.30</p>
+									  	</div>
+									</a>
+								</li>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	<div id="textBox">
+											<p id="courseName">깐따삐야 가는 길</p>
+											<p id="courseInfo">둘리</p>
+											<p id="courseInfo">조회수18 * 22.06.29</p>
+									  	</div>
+								  	</a>
+								</li>
+								<li>
+									<a href="">
+									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<div id="textBox">
+											<p id="courseName">집에 가는 길</p>
+											<p id="courseInfo">둘리</p>
+											<p id="courseInfo">조회수11 * 22.06.21</p>
+									 	</div>
+									</a>
+								</li>
+							</ol>
+						</div>
+				    </div>
+				  </div>
+				  
 				</div>
 			</div>
 		</div>
