--- a/webapp/WEB-INF/views/my-page/menubar.html
+++ b/webapp/WEB-INF/views/my-page/menubar.html
@@ -108,6 +108,39 @@
 
 <!-- 모달-즐겨찾기 추가 끝!! ************************************************************************************* -->
 
+<!-- 모달-즐겨찾기 삭제 ***************************************************************************************** -->
+
+
+<div class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">즐겨찾기 삭제</h4>
+        <h3 class="modal-title">삭제할 목록을 선택해 주세요.</h3>
+      </div>
+      <div class="modal-body">
+        <select>
+        	<option>즐겨찾기1</option>
+        	<option>즐겨찾기2</option>
+        	<option>즐겨찾기3</option>
+        	<option>으아아아앙</option>
+        </select>
+        <p>목록을 삭제할 경우,<br>목록 안의 내용들도 삭제됩니다!!</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">취소</button>
+        <button type="button" class="btn btn-primary">목록 만들기</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+
+
+<!-- 모달-즐겨찾기 삭제 끝!! ************************************************************************************* -->
+
 
 
 </body>
