--- a/webapp/WEB-INF/views/my-page/my-course.html
+++ b/webapp/WEB-INF/views/my-page/my-course.html
@@ -58,68 +58,68 @@
 				<p id="listTitle">나의 코스 보기</p>
 				<ol>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">22.07.01</p>
 								<p id="courseInfo">조회수2 * 기록8</p>
 						  	</div>
-						</a>
+						</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">22.07.01</p>
 								<p id="courseInfo">조회수2 * 기록8</p>
 						  	</div>
-						</a>
+						</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">깐따삐야 가는 길</p>
 								<p id="courseInfo">22.07.01</p>
 								<p id="courseInfo">조회수2 * 기록8</p>
 						  	</div>
-					  	</a>
+					  	</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">집에 가는 길</p>
 								<p id="courseInfo">22.07.01</p>
 								<p id="courseInfo">조회수2 * 기록8</p>
 						 	</div>
-						</a>
+						</div>
 					</li>
 					
 					
 					
 					
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">22.07.01</p>
 								<p id="courseInfo">조회수2 * 기록8</p>
 						  	</div>
-						</a>
+						</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">22.07.01</p>
 								<p id="courseInfo">조회수2 * 기록8</p>
 						  	</div>
-						</a>
+						</div>
 					</li>
 				</ol>
 			</div>
