--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -74,86 +74,86 @@
 						<div class="panel-body">
 							<ol>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
 									  	<div id="textBox">
 											<p id="courseName">신나는 코스</p>
 											<p id="courseInfo">홍길동</p>
 											<p id="courseInfo">조회수2 * 22.07.01</p>
 									  	</div>
-									</a>
+									</div>
 								</li>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">이건아닌데...</p>
 											<p id="courseInfo">고길동</p>
 											<p id="courseInfo">조회수2 * 22.06.30</p>
 									  	</div>
-									</a>
+									</div>
 								</li>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 									  	<div id="textBox">
 											<p id="courseName">깐따삐야 가는 길</p>
 											<p id="courseInfo">둘리</p>
 											<p id="courseInfo">조회수18 * 22.06.29</p>
 									  	</div>
-								  	</a>
+								  	</div>
 								</li>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">집에 가는 길</p>
 											<p id="courseInfo">둘리</p>
 											<p id="courseInfo">조회수11 * 22.06.21</p>
 									 	</div>
-									</a>
+									</div>
 								</li>
 								
 								
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
 									  	<div id="textBox">
 											<p id="courseName">신나는 코스</p>
 											<p id="courseInfo">홍길동</p>
 											<p id="courseInfo">조회수2 * 22.07.01</p>
 									  	</div>
-									</a>
+									</div>
 								</li>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">이건아닌데...</p>
 											<p id="courseInfo">고길동</p>
 											<p id="courseInfo">조회수2 * 22.06.30</p>
 									  	</div>
-									</a>
+									</div>
 								</li>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 									  	<div id="textBox">
 											<p id="courseName">깐따삐야 가는 길</p>
 											<p id="courseInfo">둘리</p>
 											<p id="courseInfo">조회수18 * 22.06.29</p>
 									  	</div>
-								  	</a>
+								  	</div>
 								</li>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">집에 가는 길</p>
 											<p id="courseInfo">둘리</p>
 											<p id="courseInfo">조회수11 * 22.06.21</p>
 									 	</div>
-									</a>
+									</div>
 								</li>
 							</ol>
 						</div>
@@ -171,44 +171,44 @@
 						<div class="panel-body">
 							<ol>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
 									  	<div id="textBox">
 											<p id="courseName">신나는 코스</p>
 											<p id="courseInfo">홍길동</p>
 											<p id="courseInfo">조회수2 * 22.07.01</p>
 									  	</div>
-									</a>
+									</div>
 								</li>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">이건아닌데...</p>
 											<p id="courseInfo">고길동</p>
 											<p id="courseInfo">조회수2 * 22.06.30</p>
 									  	</div>
-									</a>
+									</div>
 								</li>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 									  	<div id="textBox">
 											<p id="courseName">깐따삐야 가는 길</p>
 											<p id="courseInfo">둘리</p>
 											<p id="courseInfo">조회수18 * 22.06.29</p>
 									  	</div>
-								  	</a>
+								  	</div>
 								</li>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">집에 가는 길</p>
 											<p id="courseInfo">둘리</p>
 											<p id="courseInfo">조회수11 * 22.06.21</p>
 									 	</div>
-									</a>
+									</div>
 								</li>
 							</ol>
 						</div>
@@ -228,44 +228,44 @@
 						<div class="panel-body">
 							<ol>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
 									  	<div id="textBox">
 											<p id="courseName">신나는 코스</p>
 											<p id="courseInfo">홍길동</p>
 											<p id="courseInfo">조회수2 * 22.07.01</p>
 									  	</div>
-									</a>
+									</div>
 								</li>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">이건아닌데...</p>
 											<p id="courseInfo">고길동</p>
 											<p id="courseInfo">조회수2 * 22.06.30</p>
 									  	</div>
-									</a>
+									</div>
 								</li>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 									  	<div id="textBox">
 											<p id="courseName">깐따삐야 가는 길</p>
 											<p id="courseInfo">둘리</p>
 											<p id="courseInfo">조회수18 * 22.06.29</p>
 									  	</div>
-								  	</a>
+								  	</div>
 								</li>
 								<li>
-									<a href="">
+									<div style="cursor: pointer;" onclick="window.location='';">
 									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">집에 가는 길</p>
 											<p id="courseInfo">둘리</p>
 											<p id="courseInfo">조회수11 * 22.06.21</p>
 									 	</div>
-									</a>
+									</div>
 								</li>
 							</ol>
 						</div>
