--- a/webapp/WEB-INF/views/my-page/main.html
+++ b/webapp/WEB-INF/views/my-page/main.html
@@ -57,86 +57,86 @@
 				<p id="listTitle">최근 조회한 코스들</p>
 				<ol>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
 						  	</div>
-						</a>
+						</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
 						  	</div>
-						</a>
+						</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">깐따삐야 가는 길</p>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
 						  	</div>
-					  	</a>
+					  	</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">집에 가는 길</p>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수11 * 22.06.21</p>
 						 	</div>
-						</a>
+						</div>
 					</li>
 					
 					
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
 						  	</div>
-						</a>
+						</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
 						  	</div>
-						</a>
+						</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">깐따삐야 가는 길</p>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
 						  	</div>
-					  	</a>
+					  	</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">집에 가는 길</p>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수11 * 22.06.21</p>
 						 	</div>
-						</a>
+						</div>
 					</li>
 				</ol> 
 			</div>
@@ -147,44 +147,44 @@
 				
 				<ol>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
 						  	</div>
-						</a>
+						</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
 						  	</div>
-						</a>
+						</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="window.location='';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">깐따삐야 가는 길</p>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
 						  	</div>
-					  	</a>
+					  	</div>
 					</li>
 					<li>
-						<a href="">
+						<div style="cursor: pointer;" onclick="'';">
 						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">집에 가는 길</p>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수11 * 22.06.21</p>
 						 	</div>
-						</a>
+						</div>
 					</li>
 				</ol>
 			</div>
