--- a/webapp/WEB-INF/views/my-page/my-report.html
+++ b/webapp/WEB-INF/views/my-page/my-report.html
@@ -72,34 +72,44 @@
 								<p id="monthReport">이달의 기록</p><p id="todayReport">오늘의 기록</p>
 							</li>
 							<li id="reportContent">
-								<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
-								<p id="contentTitle">내가 여기 왔다감ㅋ</p>
-								<p id="content">링거 맞고 뛰었다^^</p>
-								<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+								<div style="cursor: pointer;" onclick="window.location='';">
+									<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+									<p id="contentTitle">내가 여기 왔다감ㅋ</p>
+									<p id="content">링거 맞고 뛰었다^^</p>
+									<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+								</div>
 							</li>
 							<li id="reportContent">
-								<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
-								<p id="contentTitle">우앙우앙우앙</p>
-								<p id="content">우앙우앙우앙^^</p>
-								<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+								<div style="cursor: pointer;" onclick="window.location='';">
+									<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+									<p id="contentTitle">우앙우앙우앙</p>
+									<p id="content">우앙우앙우앙^^</p>
+									<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+								</div>
 							</li>
 							<li id="reportContent">
-								<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
-								<p id="contentTitle">산책 재밌다</p>
-								<p id="content">산책 다녀왔는데 좋았네</p>
-								<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+								<div style="cursor: pointer;" onclick="window.location='';">
+									<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+									<p id="contentTitle">산책 재밌다</p>
+									<p id="content">산책 다녀왔는데 좋았네</p>
+									<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+								</div>
 							</li>
 							<li id="reportContent">
-								<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
-								<p id="contentTitle">무더위</p>
-								<p id="content">요즘 날씨 미친거 같다</p>
-								<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+								<div style="cursor: pointer;" onclick="window.location='';">
+									<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+									<p id="contentTitle">무더위</p>
+									<p id="content">요즘 날씨 미친거 같다</p>
+									<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+								</div>
 							</li>
 							<li id="reportContent">
-								<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
-								<p id="contentTitle">살려줘ㅠㅠ</p>
-								<p id="content">html/css너무 귀찮다ㅠㅠ</p>
-								<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+								<div style="cursor: pointer;" onclick="window.location='';">
+									<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+									<p id="contentTitle">살려줘ㅠㅠ</p>
+									<p id="content">html/css너무 귀찮다ㅠㅠ</p>
+									<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
+								</div>
 							</li>
 						</ul>
 					</div>
